Responsive maps and charts

--- a/chart/index.html
+++ b/chart/index.html
@@ -7,6 +7,8 @@
 <body>
 	<div id='limitChart'> </div>
 	<div id='pieChart'></div>
+	<div id = 'ingresoChart'></div>
+	<div id = 'egresoChart'></div>
 </body>
 
 <script src="limitChart.js"></script>
