--- a/maps/index.html
+++ b/maps/index.html
@@ -10,7 +10,17 @@
    	integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
    	crossorigin=""/>
 
-   	
+   	<style>
+   	#map {
+    display: inline-block;
+    position: relative;
+    width: 100%;
+    min-width: 30%;
+    height: 40%;
+    background-size: contain;
+	}
+   	</style>
+
 </head>
 <body>
 
@@ -24,7 +34,7 @@
 	  </select>
 	</div>
 
-	<div id = "map" style="height:500px" "width: 500px"></div>
+	<div id = "map" style="height:400px" "width: 500px"></div>
 
 	<script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
    	integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
