Added "Egreso" and "Ingreso" charts, minor changes to map

--- a/chart/index.html
+++ b/chart/index.html
@@ -1,15 +1,19 @@
 <head>
 	<!-- Load plotly.js into the DOM -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width = device_width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie-edge">
 	<script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
+
 </head>
 
 <!--- plots will be drawn in divs---->
 <body>
 	<div id='limitChart'> </div>
-	<div id='pieChart'></div>
 	<div id = 'ingresoChart'></div>
 	<div id = 'egresoChart'></div>
 </body>
 
 <script src="limitChart.js"></script>
-<script src="pieChart.js"></script>
+<script src="inChart.js"></script>
+<script src="egChart.js"></script>
