--- a/chart/index.html
+++ b/chart/index.html
@@ -12,8 +12,10 @@
 	<div id='limitChart'> </div>
 	<div id = 'ingresoChart'></div>
 	<div id = 'egresoChart'></div>
+	<div id = 'promotorChart'></div>
 </body>
 
 <script src="limitChart.js"></script>
 <script src="inChart.js"></script>
 <script src="egChart.js"></script>
+<script src="promChart.js"></script>
