--- a/chart/index.html
+++ b/chart/index.html
@@ -12,10 +12,14 @@
 	<div id='limitChart'> </div>
 	<div id = 'ingresoChart'></div>
 	<div id = 'egresoChart'></div>
+	<div id = 'ingresoBar'></div>
+	<div id = 'egresoBar'></div>
 	<div id = 'promotorChart'></div>
 </body>
 
 <script src="limitChart.js"></script>
 <script src="inChart.js"></script>
 <script src="egChart.js"></script>
+<script src="inBar.js"></script>
+<script src="egBar.js"></script>
 <script src="promChart.js"></script>
